# PerfumeRAG

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  TEST_REPORT.md  TEST_REPORT2.md  docker-compose.yml  pyproject.toml
api/: manage.py
api/config/: settings.py  urls.py  wsgi.py
api/perfume_api/: serializers.py  urls.py  views.py
scripts/: build_index.py  query.py
src/perfume_rag/: generator.py  ingest.py  pipeline.py  retriever.py
tests/: test_generator.py  test_ingest.py  test_retriever.py
